--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -44,7 +44,8 @@ jobs:
             fi
           
             # Start or restart the application with PM2
-            pm2 delete node-CI-CD || true
-            pm2 start || pm2 restart node-CI-CD
-            pm2 save
+            sudo pm2 delete gitaction || true
+            # sudo pm2 start || sudo pm2 restart gitaction
+            sudo pm2 start index.js --name "gitaction"
+            sudo pm2 save
           EOF
